--- a/FrontEnd/profil_page.html
+++ b/FrontEnd/profil_page.html
@@ -2,13 +2,50 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
+    <!-- IMPORTANT  (adapter le site à tous les écrans) -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style_q.css">
+    <!-- IMPORTANT (description du site sur les moteurs) -->
+    <meta name="description" content="description du site">
+    <!-- IMPORTANT  (indexer le site sur les moteurs) -->
+    <meta name="robots" content="NOINDEX, NOFOLLOW">
+    <!-- Optionelle (mot clé pour trouver le site) -->
+    <meta name="keywords" content="QYB">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style_q.css">
+    <link rel="stylesheet" href="css/style.css" >
+    <script src="js/script_q.js"></script>
     <title>Cinema QBY Profil</title>
 </head>
 <body>
+    <!-- =============================HEADER============================= -->
     <header>
+        <img class=" app-img-cinema" src="img/cinéma.jpg" alt="Image Cinéma ">
+        <nav class="app-nav-header">
+            <div class="app-nav-ul">
+                <div>
 
+                    <a href="home_page.html">
+                        <div class="app-li">Acceuil</div>
+                    </a>
+                    <a href="movie_page">
+                        <div class="app-li">Films</div>
+                    </a>
+                    <a href="time_table_page">
+                        <div class="app-li">Horaires</div>
+                    </a>
+                    <a href="reservation_page">
+                        <div class="app-li">Réservation </div>
+                    </a>
+                    <a href="sign_in_image.html">
+                        <div class="app-li">Connexion</div>
+                    </a>
+                    <a href="sign_up_image.html ">
+                        <div class="app-li">Inscription</div>
+                    </a>
+
+                </div>
+                </ul>
+        </nav>
     </header>
     
     <main>
@@ -17,7 +54,11 @@
             <form class="app-form-connect">
                 <div>
                 <label for="pseudo">Pseudo :</label>
-                <input type="text" id="pseudo" name="pseudo" value="MoshGoss">
+                <input type="text" id="pseudo" name="pseudo" value="MoshGoss" disabled>
+                </div>
+                <div>
+                <label for="newpseudo">Nouveau Pseudo :</label>
+                <input type="text" id="newpseudo" name="newpseudo" value="">
                 </div>
                 <div>
                 <label for="email">Email :</label>
@@ -29,10 +70,10 @@
                 </div>
                 <div>
                 <label for="mdp">MDP :</label>
-                <input type="text" id="mdp" name="mdp" value="">
+                <input type="password" id="mdp" name="mdp" value="">
                 </div>
                 <div>
-                <input type="submit" value="Appliquer">
+                <input type="submit" value="Appliquer" onsubmit="return formPseudo();">
                 </div>
             </form> 
             <h2>Vos informations personnelles</h2>
@@ -64,8 +105,8 @@
             <h2>Changements de Mot de Passe</h2>
             <form class="app-form-mdp">
                 <div>
-                <label for="mdp">Mot de Passe Actuel :</label>
-                <input type="text" id="mdp" name="mdp" value="">
+                <label for="mdpact">Mot de Passe Actuel :</label>
+                <input type="text" id="mdpact" name="mdpact" value="">
                 </div>
                 <div>
                 <label for="newmdp">Nouveau Mot de Passe :</label>
@@ -82,8 +123,55 @@
         </section>
     </main>
 
-    <footer>
+    <!-- =============================FOOTER============================= -->
+    <footer class="footer">
 
+        <div class="app-footer">
+            <div class="app-div">
+                <div>
+                    <h3>NOS HORAIRES D'OUVETURE</h3>
+                    <div>
+                        <div>
+                            <div class="app-horaires">✔️ Lun 10h-19h</div>
+                            <div class="app-horaires">✔️ Mar 10h-19h</div>
+                        </div>
+                        <div>
+                            <div class="app-horaires">✔️ Mer 10h-19h</div>
+                            <div class="app-horaires">✔️ Jeu 10h-19h</div>
+                        </div>
+                        <div>
+                            <div class="app-horaires">✔️ Ven 10h-19h</div>
+                            <div class="app-horaires">❌ Sam fermé</div>
+                            <div class="app-horaires">❌ Dim fermé</div>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <h3>RESTONS EN CONTACT</h3>
+                    <div>
+                        <p class="app-contact-p">48-48-48-48-48</p>
+                        <p class="app-contact-p">supportclient@contact.com</p>
+                    </div>
+                </div>
+
+                <div>
+                    <h3>LIENS</h3>
+                    <a href="https://www.facebook.com/"><img src="img/facebook.png" class="app-img"></a>
+                    <a href="https://twitter.com/?lang=fr" alt=" "><img src="img/twitter.png " class="app-img "></a>
+                    <a href="" alt=" "> <img src="img/linkedin.png " class="app-img "></a>
+                </div>
+            </div>
+        </div>
+        <div class="app-CGV-CGU ">
+            <p>MENTIONS LÉGALES</p>
+            <p> DONNÉES PERSONNELLES</p>
+            <p>PLAN DU SITE</p>
+        </div>
+        <div class="app-separation"></div>
+        <div class="app-copyright ">
+            <p class="app-parag"> &copy: Team QBY </p>
+            <p><a href="mailto:hege@example.com ">hege@example.com</a></p>
+        </div>
     </footer>
 </body>
 </html>
