--- a/FrontEnd/profil_page.html
+++ b/FrontEnd/profil_page.html
@@ -27,19 +27,19 @@
                     <a href="home_page.html">
                         <div class="app-li">Acceuil</div>
                     </a>
-                    <a href="movie_page">
+                    <a href="movie_page.html">
                         <div class="app-li">Films</div>
                     </a>
-                    <a href="time_table_page">
+                    <a href="timetable_page.html">
                         <div class="app-li">Horaires</div>
                     </a>
-                    <a href="reservation_page">
+                    <a href="reservation_page.html">
                         <div class="app-li">Réservation </div>
                     </a>
-                    <a href="sign_in_image.html">
+                    <a href="signin_page.html">
                         <div class="app-li">Connexion</div>
                     </a>
-                    <a href="sign_up_image.html ">
+                    <a href="signup_page.html ">
                         <div class="app-li">Inscription</div>
                     </a>
 
