COMMIT General soirée 19/04 (BDD, insert) | soirée 21/04 (Travail css, html)

--- a/FrontEnd/profil_page.html
+++ b/FrontEnd/profil_page.html
@@ -27,7 +27,7 @@
                     <a href="home_page.html">
                         <div class="app-li">Acceuil</div>
                     </a>
-                    <a href="movie_page">
+                    <a href="movie_page.html">
                         <div class="app-li">Films</div>
                     </a>
                     <a href="time_table_page">
@@ -36,10 +36,10 @@
                     <a href="reservation_page">
                         <div class="app-li">Réservation </div>
                     </a>
-                    <a href="sign_in_image.html">
+                    <a href="singin_page.html">
                         <div class="app-li">Connexion</div>
                     </a>
-                    <a href="sign_up_image.html ">
+                    <a href="sign_up_image.html">
                         <div class="app-li">Inscription</div>
                     </a>
 
