--- a/FrontEnd/movie_page.html
+++ b/FrontEnd/movie_page.html
@@ -4,17 +4,56 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Film</title>
-	<link rel="stylesheet" href="style_y.css">
+	<link rel="stylesheet" href="css/style_y.css">
+	<link rel="stylesheet" href="css/style.css" >
 </head>
-<body>
-	<div>
-		<div name="ZoneListeFilm"  class="app-bloc-inline-block">
+
+<header>
+
+</header>
+
+<main>
+	<body>
+		<div class="container">
+			<div class="content-container">
+				<div class="movie-list-container">
+					<div class="movie-list-wrapper">
+						<div class="movie-list">
+							<div class="movie-list-item">
+								<img class="movie-list-item-img" src="" alt="">
+								<span class="movie-list-item-title">Her</span>
+								<p class="movie-list-item-desc">Ceci est la description breve du film</p>
+								<button class="movie-list-item-button">Watch</button>
+							</div>
+							<div class="movie-list-item">
+								<img class="movie-list-item-img" src="" alt="">
+								<span class="movie-list-item-title">Star Wars</span>
+								<p class="movie-list-item-desc">Ceci est la description breve du film</p>
+								<button class="movie-list-item-button">Watch</button>
+							</div>
+							<div class="movie-list-item">
+								<img class="movie-list-item-img" src="" alt="">
+								<span class="movie-list-item-title">Storm</span>
+								<p class="movie-list-item-desc">Ceci est la description breve du film</p>
+								<button class="movie-list-item-button">Watch</button>
+							</div>
+							<div class="movie-list-item">
+								<img class="movie-list-item-img" src="" alt="">
+								<span class="movie-list-item-title">1917</span>
+								<p class="movie-list-item-desc">Ceci est la description breve du film</p>
+								<button class="movie-list-item-button">Watch</button>
+							</div>
+							<div class="movie-list-item">
+								<img class="movie-list-item-img" src="" alt="">
+								<span class="movie-list-item-title">Avengers</span>
+								<p class="movie-list-item-desc">Ceci est la description breve du film</p>
+								<button class="movie-list-item-button">Watch</button>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
-		<div name="ZoneListeFilm"  class="app-bloc-inline-block">
-		</div>
-		<div name="ZoneListeFilm"  class="app-bloc-inline-block">
-		</div>
-		
-	</div>
-</body>
+	</body>
+</main>
 </html>
