--- a/FrontEnd/profil_page.html
+++ b/FrontEnd/profil_page.html
@@ -13,7 +13,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style_q.css">
     <link rel="stylesheet" href="css/style.css" >
-    <script src="js/script_q.js"></script>
     <title>Cinema QBY Profil</title>
 </head>
 <body>
@@ -51,7 +50,7 @@
     <main>
         <section class="app-profil-section">
             <h2>Vos informations de connexion</h2>
-            <form class="app-form-connect">
+            <form class="app-form-connect" onsubmit="return formPseudo();">
                 <div>
                 <label for="pseudo">Pseudo :</label>
                 <input type="text" id="pseudo" name="pseudo" value="MoshGoss" disabled>
@@ -73,7 +72,7 @@
                 <input type="password" id="mdp" name="mdp" value="">
                 </div>
                 <div>
-                <input type="submit" value="Appliquer" onsubmit="return formPseudo();">
+                <button type="submit" value="Appliquer">Appliquer</button>
                 </div>
             </form> 
             <h2>Vos informations personnelles</h2>
@@ -173,5 +172,6 @@
             <p><a href="mailto:hege@example.com ">hege@example.com</a></p>
         </div>
     </footer>
+    <script src="js/script_q.js"> </script>
 </body>
 </html>
