--- a/FrontEnd/profil_page.html
+++ b/FrontEnd/profil_page.html
@@ -35,17 +35,10 @@
                     <a href="reservation_page.html">
                         <div class="app-li">Réservation </div>
                     </a>
-<<<<<<< HEAD
-                    <a href="singin_page.html">
-                        <div class="app-li">Connexion</div>
-                    </a>
-                    <a href="sign_up_image.html">
-=======
                     <a href="signin_page.html">
                         <div class="app-li">Connexion</div>
                     </a>
                     <a href="signup_page.html ">
->>>>>>> cabceb4c7a6a94332d9b956a580f328e716f1f51
                         <div class="app-li">Inscription</div>
                     </a>
 
@@ -75,15 +68,15 @@
                 <input type="text" id="newemail" name="newemail" value="">
                 </div>
                 <div>
-                <label for="mdp">MDP :</label>
-                <input type="password" id="mdp" name="mdp" value="">
+                <label for="pwd">MDP :</label>
+                <input type="password" id="pwd" name="pwd" value="">
                 </div>
                 <div>
                 <button type="submit" value="Appliquer">Appliquer</button>
                 </div>
             </form> 
             <h2>Vos informations personnelles</h2>
-            <form class="app-form-perso">
+            <form class="app-form-perso" onsubmit="return formInfo();">
                 <div>
                 <label for="fname">Prénom :</label>
                 <input type="text" id="fname" name="fname" value="Quentin">
@@ -109,18 +102,18 @@
                 </div>
               </form> 
             <h2>Changements de Mot de Passe</h2>
-            <form class="app-form-mdp">
+            <form class="app-form-mdp" onsubmit="return formMdP();">
                 <div>
-                <label for="mdpact">Mot de Passe Actuel :</label>
-                <input type="text" id="mdpact" name="mdpact" value="">
+                <label for="pwdact">Mot de Passe Actuel :</label>
+                <input type="password" id="pwdact" name="pwdact" value="">
                 </div>
                 <div>
-                <label for="newmdp">Nouveau Mot de Passe :</label>
-                <input type="text" id="newmdp" name="newmdp" value="">
+                <label for="newpwd">Nouveau Mot de Passe :</label>
+                <input type="password" id="newpwd" name="newpwd" value="">
                 </div>
                 <div>
-                <label for="cnewmdp">Confirmer Nouveau MdP :</label>
-                <input type="text" id="cnewmdp" name="cnewmdp" value="">
+                <label for="cnewpwd">Confirmer Nouveau MdP :</label>
+                <input type="password" id="cnewpwd" name="cnewpwd" value="">
                 </div>
                 <div>
                 <input type="submit" value="Appliquer">
