--- a/FrontEnd/profil_page.html
+++ b/FrontEnd/profil_page.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <!-- IMPORTANT  (adapter le site à tous les écrans) -->
@@ -10,43 +11,45 @@
     <meta name="robots" content="NOINDEX, NOFOLLOW">
     <!-- Optionelle (mot clé pour trouver le site) -->
     <meta name="keywords" content="QYB">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style_q.css">
-    <link rel="stylesheet" href="css/style.css" >
-    <title>Cinema QBY Profil</title>
+    <link rel="stylesheet" href="css/default.css">
+    <!-- Font Asom -->
+    <link rel="stylesheet" href="css/all.min.css">
+    <!-- LIEN POUR FONT AWESOME https://fontawesome.com/how-to-use/on-the-web/setup/hosting-font-awesome-yourself -->
+    <!--load all styles -->
+    <title>CINEMA QYB</title>
 </head>
+
 <body>
+
+
     <!-- =============================HEADER============================= -->
     <header>
-        <img class=" app-img-cinema" src="img/cinéma.jpg" alt="Image Cinéma ">
+        <img class="app-img-cinema" src="img/cinéma.jpg" alt="Image Cinéma ">
         <nav class="app-nav-header">
             <div class="app-nav-ul">
-                <div>
-
-                    <a href="home_page.html">
-                        <div class="app-li">Acceuil</div>
+                    <a href="home_page.html" class="app-default-headerlink">
+                        <div class="app-default-headdiv">Acceuil</div>
                     </a>
-                    <a href="movie_page.html">
-                        <div class="app-li">Films</div>
+                    <a href="movie_page.html" class="app-default-headerlink">
+                        <div class="app-default-headdiv">Films</div>
                     </a>
-                    <a href="timetable_page.html">
-                        <div class="app-li">Horaires</div>
+                    <a href="timetable_page.html" class="app-default-headerlink">
+                        <div class="app-default-headdiv">Horaires</div>
                     </a>
-                    <a href="reservation_page.html">
-                        <div class="app-li">Réservation </div>
+                    <a href="reservation_page.html" class="app-default-headerlink">
+                        <div class="app-default-headdiv">Réservation </div>
                     </a>
-                    <a href="signin_page.html">
-                        <div class="app-li">Connexion</div>
+                    <a href="signin_page.html" class="app-default-headerlink">
+                        <div class="app-default-headdiv">Connexion</div>
                     </a>
-                    <a href="signup_page.html ">
-                        <div class="app-li">Inscription</div>
+                    <a href="signup_page.html " class="app-default-headerlink">
+                        <div class="app-default-headdiv">Inscription</div>
                     </a>
-
-                </div>
-                </ul>
+            </div>
         </nav>
     </header>
-    
+
+    <!-- =============================MAIN============================= -->
     <main>
         <section class="app-profil-section">
             <h2>Vos informations de connexion</h2>
@@ -123,48 +126,45 @@
     </main>
 
     <!-- =============================FOOTER============================= -->
-    <footer class="footer">
+    <footer>
 
         <div class="app-footer">
             <div class="app-div">
-                <div>
-                    <h3>NOS HORAIRES D'OUVETURE</h3>
-                    <div>
-                        <div>
-                            <div class="app-horaires">✔️ Lun 10h-19h</div>
-                            <div class="app-horaires">✔️ Mar 10h-19h</div>
-                        </div>
-                        <div>
-                            <div class="app-horaires">✔️ Mer 10h-19h</div>
-                            <div class="app-horaires">✔️ Jeu 10h-19h</div>
-                        </div>
-                        <div>
-                            <div class="app-horaires">✔️ Ven 10h-19h</div>
-                            <div class="app-horaires">❌ Sam fermé</div>
-                            <div class="app-horaires">❌ Dim fermé</div>
-                        </div>
-                    </div>
-                </div>
-                <div>
-                    <h3>RESTONS EN CONTACT</h3>
-                    <div>
-                        <p class="app-contact-p">48-48-48-48-48</p>
-                        <p class="app-contact-p">supportclient@contact.com</p>
-                    </div>
-                </div>
-
-                <div>
-                    <h3>LIENS</h3>
-                    <a href="https://www.facebook.com/"><img src="img/facebook.png" class="app-img"></a>
-                    <a href="https://twitter.com/?lang=fr" alt=" "><img src="img/twitter.png " class="app-img "></a>
-                    <a href="" alt=" "> <img src="img/linkedin.png " class="app-img "></a>
+                <div class="app-default-footerInfo">
+                    <h2 class="app-default-footertitle">NOS HORAIRES D'OUVERTURE</h2>
+                    <div class="app-horaires-open">✔️Lun 10h-22h</div>
+                    <div class="app-horaires-open">✔️Mar 10h-22h</div>
+                    <div class="app-horaires-open">✔️Mer 10h-22h</div>
+                    <div class="app-horaires-open">✔️Jeu 10h-22h</div>
+                    <div class="app-horaires-open">✔️Ven 10h-22h</div>
+                    <div class="app-horaires-close">❌Sam fermé</div>
+                    <div class="app-horaires-close">❌Dim fermé</div>
                 </div>
             </div>
+            <div class="app-div">
+                <div class="app-default-footerInfo">
+                    <h2 class="app-default-footertitle">RESTONS EN CONTACT : </h2>
+                    <p class="app-contact-p"> 48-48-48-48-48</p>
+                    <p class="app-contact-p"> supportclient@contact.com</p>
+                </div>
+            
+
+
+                <div  class="app-default-footerInfo">
+                    <h2 class="app-default-footertitle">RESEAUX SOCIAUX : </h2>
+                    <a href="https://www.facebook.com/">
+                        <img src="img/facebook.png" class="app-img"></a>
+                    <a href="https://twitter.com/?lang=fr" alt=" ">
+                        <img src="img/twitter.png " class="app-img"></a>
+                    <a href="" alt=" ">
+                        <img src="img/linkedin.png " class="app-img"></a>
+                </div>
+            </div>   
         </div>
         <div class="app-CGV-CGU ">
-            <p>MENTIONS LÉGALES</p>
-            <p> DONNÉES PERSONNELLES</p>
-            <p>PLAN DU SITE</p>
+            <a href="CGU_CGV_page.html">MENTIONS LÉGALES</a>
+            <a href="data_page.html"> DONNÉES PERSONNELLES</a>
+            <a href="howToCome_page.html">PLAN DU SITE</a>
         </div>
         <div class="app-separation"></div>
         <div class="app-copyright ">
@@ -172,6 +172,6 @@
             <p><a href="mailto:hege@example.com ">hege@example.com</a></p>
         </div>
     </footer>
-    <script src="js/script_q.js"> </script>
 </body>
+
 </html>
