Add Q : correction map

--- a/FrontEnd/howToCome_page.html
+++ b/FrontEnd/howToCome_page.html
@@ -11,11 +11,20 @@
     <meta name="robots" content="NOINDEX, NOFOLLOW">
     <!-- Optionelle (mot clé pour trouver le site) -->
     <meta name="keywords" content="QYB">
+
+    <link rel="stylesheet" href="css/OSMapi.css">
     <link rel="stylesheet" href="css/default.css">
     <!-- Font Asom -->
     <link rel="stylesheet" href="css/all.min.css">
     <!-- LIEN POUR FONT AWESOME https://fontawesome.com/how-to-use/on-the-web/setup/hosting-font-awesome-yourself -->
     <!--load all styles -->
+    <!-- Fichiers CSS -->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ==" crossorigin=""/>
+
+    <!-- Ces deux balises link sont à insérer entre les deux balises existantes -->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.css" />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet-routing-machine@latest/dist/leaflet-routing-machine.css" />
+
     <title>CINEMA QYB</title>
 </head>
 
@@ -101,6 +110,15 @@
             <p><a href="mailto:hege@example.com ">hege@example.com</a></p>
         </div>
     </footer>
+
+
+    <!-- Fichiers JS -->
+    <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js" integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew==" crossorigin=""></script>
+
+    <!-- Ces deux balises script sont à insérer entre les deux balises existantes -->
+    <script src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.js"></script>
+    <script src="https://unpkg.com/leaflet-routing-machine@latest/dist/leaflet-routing-machine.js"></script>
+    <script src="js/OSMapi.js"></script>
 </body>
 
 </html>
