Add Q : Essaie GPS ... à abandonner tant que le reste n'est pas fini !

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -16,6 +16,13 @@
     <link rel="stylesheet" href="css/all.min.css">
     <!-- LIEN POUR FONT AWESOME https://fontawesome.com/how-to-use/on-the-web/setup/hosting-font-awesome-yourself -->
     <!--load all styles -->
+
+    <!-- Fichiers CSS -->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ==" crossorigin=""/>
+
+    <!-- Ces deux balises link sont à insérer entre les deux balises existantes -->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.css" />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet-routing-machine@latest/dist/leaflet-routing-machine.css" />
     <title>CINEMA QYB</title>
 </head>
 
